--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,4 +1,6 @@
-<h1>Resumo do site</h1>
+<h1>Faça apostas em lutas UFC</h1>
 <tbody>
-	<p>Site criado para manter apostas feitas em lutas UFC, as apostas podem ser realizadas baseadas no resultado da luta, no vencedor, em que round foi a vitoria, etc. O valor do prêmio será cauculado com base no tipo de aposta e no valor da mesma. Cada jogador poderá relaizar quantas apostas quiser desde que estas não sejam referentes a mesma luta. As apostas terão fim dez minutos antes do início da luta. Os vencedores receberão o prêmio por depósito em suas contas bancárias. </p> 
+	<p>Site criado para manter apostas feitas em lutas UFC, as apostas podem ser realizadas baseadas no resultado da luta, no vencedor, em que round foi a vitoria, etc. O valor do prêmio será calculado com base no tipo de aposta e no valor da mesma. Cada jogador poderá realizar quantas apostas quiser desde que estas não sejam referentes a mesma luta. As apostas terão fim dez minutos antes do início da luta. Os vencedores receberão o prêmio por depósito em suas contas bancárias. </p>
+
+	<%= image_tag "ufc_background1.jpg", :class => "imgIndex" %>
 </tbody>
