--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,13 +20,13 @@
 			<nav>
 				<div id="menubar">
 					<ul id="nav">
-						<li><%= link_to 'Home', root_path %></li>
-						<li><%= link_to 'Arbitro', arbitros_path %></li>
-						<li><%= link_to 'Lutador', lutadores_path %></li>
-						<li><%= link_to 'Luta',lutas_path %></li>
-						<li><%= link_to 'Jogador',jogadores_path %></li>
-						<li><%= link_to 'Tipo Aposta',tipo_apostas_path %></li>
-						<li><%= link_to 'Aposta',apostas_path %></li>
+						<li class="<%= 'active' if current_page?(root_path) %>"><%= link_to "Home", root_path %></li>
+						<li class="<%= 'active' if current_page?(arbitros_path) %>"><%= link_to "Arbitro", arbitros_path %></li>
+						<li class="<%= 'active' if current_page?(lutadores_path) %>"><%= link_to "Lutador", lutadores_path %></li>
+						<li class="<%= 'active' if current_page?(lutas_path) %>"><%= link_to "Luta", lutas_path %></li>
+						<li class="<%= 'active' if current_page?(jogadores_path) %>"><%= link_to "Jogador", jogadores_path %></li>
+						<li class="<%= 'active' if current_page?(tipo_apostas_path) %>"><%= link_to "Tipo Aposta", tipo_apostas_path %></li>
+						<li class="<%= 'active' if current_page?(apostas_path) %>"><%= link_to "Aposta", apostas_path %></li>
 					</ul>
 				</div><!--close menubar-->	
 			</nav>	
@@ -36,14 +36,14 @@
 				<div class="sidebar_container">  		
 					<div class="sidebar">
 						<div class="sidebar_item">
-							<h2>Resumo do site</h2>
-							<p>Site criado para manter apostas feitas em lutas UFC, as apostas podem ser realizadas baseadas no resultado da luta, no vencedor, em que round foi a vitoria, etc. O valor do prêmio será cauculado com base no tipo de aposta e no valor da mesma. Cada jogador poderá relaizar quantas apostas quiser desde que estas não sejam referentes a mesma luta. As apostas terão fim dez minutos antes do início da luta. Os vencedores receberão o prêmio por depósito em suas contas bancárias. </p>         
+							<h2>Como utilizar o site</h2>
+							<p>Para navegar pelo site, você pode utilizar o menu superior. Cada aba te levará a uma tela onde as opções cadastrar, exibir, deletar e editar estarão disponíveis. Qualquer dúvia, entrar em contato, o endereço de email e telefone se encontram logo abaixo.</p>         
 						</div><!--close sidebar_item--> 
 					</div><!--close sidebar-->
 					<div class="sidebar">
 						<div class="sidebar_item">
 							<h2>Contato</h2>
-							<p>Phone: +22 9 99768-2172</p>
+							<p>Telefone: +22 9 99768-2172</p>
 							<p>Email: apostasUFC@gmail.com</p>
 						</div><!--close sidebar_item--> 
 					</div><!--close sidebar-->
@@ -57,8 +57,7 @@
 			</div><!--close site_content-->  	
 		</div><!--close main-->
 
-		<footer>
-			<a href="index.html">Home</a> | <a href="ourwork.html">Our Work</a> | <a href="testimonials.html">Testimonials</a> | <a href="projects.html">Projects</a> | <a href="contact.html">Contact</a><br/><br/>
+		<footer>			
 			website template by <a href="http://www.freehtml5templates.co.uk">Free HTML5 Templates</a>
 		</footer>
 	</body>	
