--- a/app/views/jogadores/index.html.erb
+++ b/app/views/jogadores/index.html.erb
@@ -9,7 +9,7 @@
       <th>Cpf</th>
       <th>Rg</th>
       <th>Telefone</th>
-      <th>Endereco</th>
+      <th>Endereço</th>
       <th>Usuario</th>
       <th>Senha</th>
       <th>Numeroconta</th>
