comit 6 - index_lutador_editar

--- a/app/views/lutadores/show.html.erb
+++ b/app/views/lutadores/show.html.erb
@@ -30,5 +30,5 @@
   <%= @lutador.ranking %>
 </p>
 
-<%= link_to 'Editarar', edit_lutador_path(@lutador) %> |
+<%= link_to 'Editar', edit_lutador_path(@lutador) %> |
 <%= link_to 'Voltar', lutadores_path %>
