--- a/app/views/lutadores/index.html.erb
+++ b/app/views/lutadores/index.html.erb
@@ -25,7 +25,7 @@
         <td><%= lutador.especialidade %></td>
         <td><%= lutador.ranking %></td>
         <td><%= link_to 'Ver', lutador %></td>
-        <td><%= button_to 'Editarar', edit_lutador_path(lutador), :method => :get  %></td>
+        <td><%= button_to 'Editar', edit_lutador_path(lutador), :method => :get  %></td>
         <td><%= button_to 'Excluir', lutador, method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
     <% end %>
